# weak6_template

./: CMakeLists.txt  readme.md
include/: iterable_processor.hpp  parse.hpp  person_directory.hpp  ranges_pipeline.hpp
src/: iterable_processor.cpp  parse.cpp  person_directory.cpp  ranges_pipeline.cpp
tests/: test_iterable_processor.cpp  test_parse.cpp  test_person_directory.cpp  test_ranges_pipeline.cpp
